[package]
name = "accio"
version = "0.1.0"
edition = "2021"
description = "Retrieves code blocks distributed to multiple sites"
authors = ["kubuzetto <dvr.sahin@gmail.com>"]
repository = "https://github.com/kubuzetto/accio"
documentation = "https://docs.rs/accio"
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full", "fold"]
